--- a/stock_picking_line_sequence/report/report_deliveryslip.xml
+++ b/stock_picking_line_sequence/report/report_deliveryslip.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
-
     <template id="report_delivery_document" inherit_id="stock.report_delivery_document">
         <xpath expr="//table[1]/thead/tr/th[1]" position="before">
-            <th><strong>Seq.</strong></th>
+            <th>
+                <strong>Seq.</strong>
+            </th>
         </xpath>
         <xpath expr="//table[1]/tbody/tr/td[1]" position="before">
-            <td><span t-field="move.sequence2" /></td>
+            <td>
+                <span t-field="move.sequence2" />
+            </td>
         </xpath>
         <xpath expr="//table[2]/thead/tr/th[1]" position="before">
-            <th><strong>Seq.</strong></th>
+            <th>
+                <strong>Seq.</strong>
+            </th>
         </xpath>
     </template>
 
@@ -18,7 +23,9 @@
         inherit_id="stock.stock_report_delivery_has_serial_move_line"
     >
         <xpath expr="//td[1]" position="before">
-            <td><span t-field="move_line.move_id.sequence2" /></td>
+            <td>
+                <span t-field="move_line.move_id.sequence2" />
+            </td>
         </xpath>
     </template>
 
@@ -34,5 +41,4 @@
             </td>
         </xpath>
     </template>
-
 </odoo>
