--- a/stock_picking_line_sequence/report/report_deliveryslip.xml
+++ b/stock_picking_line_sequence/report/report_deliveryslip.xml
@@ -3,7 +3,7 @@
     <template id="report_delivery_document" inherit_id="stock.report_delivery_document">
         <xpath expr="//table[1]/thead/tr/th[1]" position="before">
             <th>
-                <strong>Seq.</strong>
+                <strong>Line Number</strong>
             </th>
         </xpath>
         <xpath expr="//table[1]/tbody/tr/td[1]" position="before">
@@ -13,7 +13,7 @@
         </xpath>
         <xpath expr="//table[2]/thead/tr/th[1]" position="before">
             <th>
-                <strong>Seq.</strong>
+                <strong>Line Number</strong>
             </th>
         </xpath>
     </template>
